Spark 4.0 Support (#1350)
The main change in this PR, other than the addition of the spark 4.0 specific connector, is the addition of multiple JVM execution during the build. This is done as Spark 4.0 minimal Java version is 17, while the Dataproc images still (partly) use Java 8 which the spark-3.x-bigquery connectors still support.